Backport 4.x changes to WSS4j and CXF, and add ECHD-ES Support